# avalia-ufu

./: .gitattributes  .gitignore  Dockerfile  README.md  compose.yml  database.db  diagram_esof.md  entrypoint.sh  package-lock.json  pyproject.toml  requirements.txt  run_app.sh  stop_app.sh  test.db  test.py
backend/: Dockerfile  alembic.ini  avalia_ufu.db  crud.py  database.db  database.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  run.sh  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 885d5e705af3_populando_o_banco.py
backend/auth/: email_sender.py  token.py
backend/src/: main.py
backend/src/auth/: crypto.py  email_sender.py  exceptions.py  hash.py  routes.py  token.py
backend/src/database/: core.py  crud.py  models.py  schemas.py
backend/tests/: test.db  test_auth.py  test_crypto.py  test_main.py
frontend/: Dockerfile  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js
frontend/src/api/: Api.js  root.js
frontend/src/components/: CreateReviewModalContent.js  Disciplina.js  Navbar.js  ProfPerfil.js  Review.js  ReviewPortal.js  ReviewSentOKPortal.js
frontend/src/pages/: Home.js
future/: test.db
future/src/: test.py
future/src/backend/: crud.py  main.py  schemas.py  scriptCriacao.sql
future/src/frontend/: package.json
future/src/frontend/src/api/: createReview.js
future/src/frontend/src/components/: CreateReviewModalContent.js  ProfList.js  Review.js  (+1 more)
old_backend/: README.md  pyproject.toml
old_backend/src/: main.py
old_backend/src/auth/: crypto.py  token.py
old_backend/src/database/: models.py
src/: avalia_ufu.db  main.py
src/auth/: __init__.py  routes.py  token.py
src/backend/: avalia_ufu.db  database.py  models.py  scriptCriacao.sql
src/database/: core.py  crud.py  database.py  models.py  schemas.py  test.py
src/frontend/: package-lock.json
src/frontend/frontend/: package-lock.json
src/frontend/frontend/src/: App.css  App.js
src/frontend/src/api/: postVote.js
src/frontend/src/components/: CreateReviewPortal.js  Disciplina.js  ReviewSentOKModalContent.js
src/frontend/src/pages/: About.js  Disciplinas.js  Professores.js
src/sql/: avalia_ufu.db  crud.py  database.py  main.py  models.py  schemas.py
src/sql_app/: crud.py  main.py  models.py  schemas.py
tests/: test_auth.py
(+8 files in other folders)
